@@ -14,7 +14,7 @@ public interface LoggingExtensionConverterManager {
         PathMatchingResourcePatternResolver pathMatchingResourcePatternResolver = new PathMatchingResourcePatternResolver();
         Properties properties = new Properties();
         try {
-            Resource[] resources = pathMatchingResourcePatternResolver.getResources("classpath*:/META-INF/logback-converter.properties");
+            Resource[] resources = pathMatchingResourcePatternResolver.getResources("classpath*:/META-INF/logging/logback-converter.properties");
             for (Resource each : resources) {
                 try (InputStream in = each.getInputStream()) {
                     properties.load(in);
@@ -23,10 +23,15 @@ public interface LoggingExtensionConverterManager {
             ClassLoader classLoader= Thread.currentThread().getContextClassLoader();
             for (String each : properties.stringPropertyNames()) {
                 String className= properties.getProperty(each);
+                //if the value is the express, not a validated converter class
+                if(className.contains("%")){
+                    continue;
+                }
+                properties.put(each, "%"+each);
                 Class clazz= classLoader.loadClass(className);
                 PatternLayout.defaultConverterMap.put(each, className);
-                if(InheritableThreadClassicConverter.class.isAssignableFrom(clazz)){
-                    InheritableThreadAsyncAppender.addInheritableThreadClassicConverter((InheritableThreadClassicConverter)clazz.newInstance());
+                if(InheritableThreadClassicConverter.class.isAssignableFrom(clazz) ){
+                    InheritableThreadAsyncAppender.addInheritableThreadClassicConverter((InheritableThreadClassicConverter)clazz.getDeclaredConstructor().newInstance());
                 }
             }
         } catch (Exception e) {
